--- a/themes/littlevit/sass/layouts/front/blocks/_modal.scss
+++ b/themes/littlevit/sass/layouts/front/blocks/_modal.scss
@@ -1,18 +1,25 @@
 .modal {
-  padding: 25px 0 15px;
+  padding: 20px 0 10px;
   text-align: center;
 
   @include breakpoint($md) {
     max-width: 720px;
+    padding: 25px 0 15px;
   }
 
   &__title {
-    margin-bottom: 40px;
-    padding: 15px 0;
+    margin-bottom: 20px;
+    padding: 10px 0;
     background: $gold;
     color: #fff;
     font-family: $ptserif;
-    font-size: 36px;
+    font-size: 24px;
+
+    @include breakpoint($md) {
+      margin-bottom: 40px;
+      padding: 15px 0;
+      font-size: 36px;
+    }
   }
 
   &__text {
@@ -24,6 +31,7 @@
 
     @include breakpoint(max-width $md - 1) {
       font-size: 13px;
+      line-height: 1.25;
     }
     &--func {
       margin-top: 20px;
